# Threat-Detection-Incident-Response-Platform

./: .env.example  .gitignore  .style.yapf  DEMO.md  README.md  cloudflared.compose.yml  compose.yml  dev.compose.yml  justfile
backend/: .style.yapf  pyproject.toml  wsgi.py
backend/app/: __init__.py  cli.py  config.py  extensions.py
backend/app/controllers/: admin_ctrl.py  alert_ctrl.py  auth_ctrl.py  dashboard_ctrl.py  log_ctrl.py  rule_ctrl.py  scenario_ctrl.py
backend/app/core/: auth.py  errors.py  rate_limiting.py  serialization.py  streaming.py
backend/app/core/decorators/: __init__.py  endpoint.py  response.py  schema.py
backend/app/engine/: correlation.py  normalizer.py  severity.py
backend/app/models/: Alert.py  Base.py  CorrelationRule.py  LogEvent.py  ScenarioRun.py  User.py
backend/app/routes/: __init__.py  admin.py  alerts.py  auth.py  dashboard.py  logs.py  rules.py  scenarios.py
backend/app/scenarios/: playbook.py  runner.py
backend/app/scenarios/playbooks/: brute_force_lateral.yml  data_exfiltration.yml  phishing_c2.yml  privilege_escalation.yml
backend/app/schemas/: admin.py  alert.py  auth.py  dashboard.py  log_event.py  rule.py  scenario.py
conf/docker/dev/: flask.docker  vite.docker
conf/docker/prod/: flask.docker  vite.docker
conf/nginx/: dev.nginx  nginx.conf  nginx.prod.conf  prod.nginx
frontend/: .gitignore  index.html  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx  styles.scss
frontend/src/api/hooks/: index.ts  useAdmin.ts  useAlerts.ts  useAuth.ts  useDashboard.ts  useEventStream.ts  useLogs.ts  useRules.ts  useScenarios.ts
frontend/src/api/types/: admin.types.ts  alert.types.ts  auth.types.ts  common.types.ts  dashboard.types.ts  index.ts  log.types.ts  rule.types.ts  scenario.types.ts
frontend/src/core/app/: admin-route.tsx  index.ts  protected-route.tsx  router.tsx  shell.module.scss  shell.tsx
frontend/src/core/charts/: index.ts  theme.ts
frontend/src/core/lib/: api.ts  errors.ts  index.ts  query.ts
frontend/src/core/stores/: auth.store.ts  index.ts  stream.store.ts  ui.store.ts
frontend/src/routes/admin/: admin.module.scss  index.tsx
frontend/src/routes/alerts/: alerts.module.scss  index.tsx
frontend/src/routes/dashboard/: dashboard.module.scss  index.tsx
frontend/src/routes/dashboard/components/: event-timeline.module.scss  event-timeline.tsx  severity-chart.module.scss  severity-chart.tsx  stat-cards.module.scss  stat-cards.tsx  top-sources.module.scss  top-sources.tsx
frontend/src/routes/landing/: index.tsx  landing.module.scss
frontend/src/routes/login/: index.tsx  login.module.scss
frontend/src/routes/logs/: index.tsx  logs.module.scss
frontend/src/routes/register/: index.tsx  register.module.scss
frontend/src/routes/rules/: index.tsx  rules.module.scss
frontend/src/routes/scenarios/: index.tsx  scenarios.module.scss
frontend/src/routes/settings/: index.tsx  settings.module.scss
frontend/src/styles/: _fonts.scss  _index.scss  _mixins.scss  _reset.scss  _tokens.scss
learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
